welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: value baisserBrosse
def coupstylo(c:Color) {setCouleurBrosse(c);baisserBrosse();leverBrosser()}
                                            ^PatternPicture:1: error: not found: value leverBrosser
def coupstylo(c:Color) {setCouleurBrosse(c);baisserBrosse();leverBrosser()}
                                                            ^