welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def coupstylo(c:Color) {setCouleurBrosse(c);baisserBrosse();leverBrosser()}
def faireU(c:Color) {gauche();avance();coupstylo(c);recule();droite();avance();coupstylo(c);avance();avance();gauche()}

def motif() {faireU(Color.RED);faireU(Color.BLUE);faireU(Color.GREEN);faireU(Color.YELLOW)}
def motifSuivant() {for (i <- 1 to 4) {avance()}}
def ligneSuivante() {gauche();for (i<- 1 to 3) {avance}}
override def run() {for (i <- 1 to 2) {for (j <- 1 to 2) {motif();motifSuivant()};ligneSuivante()}
}